--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@ body {
 
 main {
     width: 100%;
-    height: 100vh;
+    height: 95vh;
     display: flex;
-    
     justify-content: center;
     align-items: center;
 }
@@ -36,10 +35,6 @@ main {
     height: 500px;
     background-color: var(--white);  
     border-radius: 20px; 
-}
-
-article .container-square {
-    
 }
 
 .container-square .qr {
@@ -62,4 +57,26 @@ article .container-description {
     font-size: 1.6rem;
     font-weight: 400;
     color: var(--Light-gray);
+}
+
+footer .attribution {
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: bold;
+    background-color: var(--Dark-blue);
+    color: white;
+    font-family: 'Outfit', sans-serif;
+}
+
+footer .attribution p {
+    margin: 0 20px;
+}
+
+
+a {
+    color: white;
 }
